feat(statistics-service): Statistics are now updated when completing or skipping a task